# plug-remote-c

./: .gitignore  README.md  build.gradle
gradle/wrapper/: gradle-wrapper.properties
src/: Makefile  plug_server_main.c
src/bloom_filter/: CMakeLists.txt  Makefile  bf_test  bloom_filter.c  bloom_filter.h  bloom_filter_test.c
src/buffer/: Makefile  buffer.c  buffer.h
src/hash/: Makefile
src/hash/murmur3/: murmur3.c  murmur3.h
src/hashable/: hashable.h
src/hashtable/: CMakeLists.txt  Makefile  Makefile.old  hashtable.h  hashtable_test_main.c  linear_scan.c
src/language_module/: .cproject  Makefile  gve_adaptor.c  gve_adaptor.h  language_module.h
src/mock/c/: mock_main.c  mock_runtime.h
src/open/: Makefile  circular_buffer.c  circular_buffer_test_main.c  open.h
src/plug/c/: plug_server_main.c
src/random/c/: random_main.c  random_runtime.c  random_runtime.h
src/reflections/: Makefile  driver.h  driver_software.c  gve_main_bare.c
src/runtimes/mock/: Makefile  mock_automata.graphmlz  mock_runner.c  mock_runtime.c  mock_runtime.h
src/runtimes/random/: Makefile  random_runtime.h
src/server/: Makefile
src/server/c/: api_handlers.c  api_handlers.h  server.c
src/server/headers/: language_runtime_api.h  server.h
src/set/: .cproject  CMakeLists.txt  set.c  set.h
src/simple_soup/: .Makefile.swp  .cproject  Makefile  simple_main  simple_main.c  ss_interpreter.c  ss_interpreter.h  ss_language_module.c  ss_language_module.h  ss_metamodel.c  ss_metamodel.h
src/simple_soup/Default/: Makefile
src/soup/: soup.h
(+15 files in other folders)
